...
      notification: paperTheme.colors.secondary,
    },
  };

  return (
    <View
      testID="app.root"
      accessibilityLabel="BuffaGo app root"
      style={{ flex: 1 }}
    >
    <PaperProvider theme={paperTheme}>
      <NavThemeProvider value={navTheme}>
        <LocationProvider>
...
